--- a/local/src_v6/components/header/menu/menu-mob/index.pug
+++ b/local/src_v6/components/header/menu/menu-mob/index.pug
@@ -1,86 +1,231 @@
 .menu-mob
   ul.menu_level_1.list-reset.break-word
-    li.item_1
-      a(href='#')
-        span Разработка проектов
-    li.item_1
-      a(href='#')
-        span Продвижение сайтов
-      a.icon(data-toggle='collapse', href='#accordion-m-12')
-      #accordion-m-12.collapse.show.submenu
-        ul.menu_level_2.list-reset
-          li.item_2
-            a(href='#')
-              span Продвижение по позициям
-          li.item_2
-            span
-              span Экспересс-SEO
-          li.item_2.active
-            a(href='#')
-              span Развития проектов (Повышение конверсии)
-          li.item_2.active
-            span
-              span SEO-аудит
-          li.item_2
-            a(href='#')
-              span Стратегический поисковый маркетинг
-          li.item_2
-            a(href='#')
-              span SERM-управление репутацией в поиске
-    li.item_1.active
-      a(href='#')
-        span Техническая поддержка
     li.item_1.active
       span
-        span Дизайн и проектирование
+        span Каталог
       a.icon.collapsed(data-toggle='collapse', href='#accordion-m-14')
       #accordion-m-14.collapse.submenu
         ul.menu_level_2.list-reset
-          li.item_2
-            a(href='#')
-              span Пункт 11
-          li.item_2
-            span
-              span Пункт 12
-          li.item_2.active
-            a(href='#')
-              span Пункт 13 (дополнительная удлинняющая строка)
-            a.icon.collapsed(data-toggle='collapse', href='#accordion-m-213')
-            #accordion-m-213.collapse.submenu
-              ul.menu_level_3.list-reset
-                li.item_3
-                  a(href='#') Страхование домашнего имущества
-                li.item_3
-                  a(href='#') Комплексное страхование помещений и ГО его владельцев
-                li.item_3
-                  a(href='#') Страхование строений
           li.item_2.active
             span
-              span Пункт 14
-            a.icon.collapsed(data-toggle='collapse', href='#accordion-m-214')
-            #accordion-m-214.collapse.submenu
+              span Волосы
+            a.icon.collapsed(data-toggle='collapse', href='#accordion-m-141')
+            #accordion-m-141.collapse.submenu
               ul.menu_level_3.list-reset
                 li.item_3
-                  a(href='#') Страхование домашнего имущества
-                li.item_3
-                  a(href='#') Комплексное страхование помещений и ГО его владельцев
-                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-2141')
-                  #accordion-m-2141.collapse
+                  span Обработка
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1411')
+                  #accordion-m-1411.collapse
                     ul.menu_level_4.list-reset
                       li.item_4
-                        a(href='#') Страхование домашнего имущества
+                        a(href='#') Ножницы для маникюра
                       li.item_4
-                        a(href='#') Комплексное страхование помещений и ГО его владельцев
+                        a(href='#') Кусачки для маникюра
                       li.item_4
-                        a(href='#') Страхование строений
+                        a(href='#') Кусачки для педикюра
+                      li.item_4
+                        a(href='#') Фрезы
+                      li.item_4
+                        a(href='#') Пилки и терки для стоп
+                      li.item_4
+                        a(href='#') Лопатки, шаберы
+                      li.item_4
+                        a(href='#') Пилочка и бафы
+                      li.item_4
+                        a(href='#') Сопутствующие материалы
                 li.item_3
-                  a(href='#') Страхование строений
+                  span Уход
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1412')
+                  #accordion-m-1412.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Для удаления кутикулы
+                      li.item_4
+                        a(href='#') Для питания кутикулы
+                      li.item_4
+                        a(href='#') Для рук
+                li.item_3
+                  span Базы, топы, гели
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1413')
+                  #accordion-m-1413.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Базы под гель-лак
+                      li.item_4
+                        a(href='#') Топы под гель-лак
+                      li.item_4
+                        a(href='#') Праймеры
+                      li.item_4
+                        a(href='#') Гели
+                      li.item_4
+                        a(href='#') Формы для наращивания
+                      li.item_4
+                        a(href='#') Полигель
+                li.item_3
+                  span Аппараты для маникюра
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1414')
+                  #accordion-m-1414.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Ванночки
+                      li.item_4
+                        a(href='#') Пылесосы
+                      li.item_4
+                        a(href='#') Лампы
+                li.item_3
+                  span Дизайн ногтей
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1415')
+                  #accordion-m-1415.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Наклейки
+                      li.item_4
+                        a(href='#') Блестки,стразы
+                      li.item_4
+                        a(href='#') Фольга, поталь, втирка
+                li.item_3
+                  span Обработка инструментов
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1416')
+                  #accordion-m-1416.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Пакеты для стрелизации
+                      li.item_4
+                        a(href='#') Контейнеры для дезинфекции
+                li.item_3
+                  a(href='#') Кисти для маникюра
+                li.item_3
+                  a(href='#') Наборы для маникюра
+                li.item_3
+                  a(href='#') Очищение и снятие
+          li.item_2
+            span
+              span Брови и ресницы
+            a.icon.collapsed(data-toggle='collapse', href='#accordion-m-142')
+            #accordion-m-142.collapse.submenu
+              ul.menu_level_3.list-reset
+                li.item_3
+                  span Обработка
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1421')
+                  #accordion-m-1421.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Ножницы для маникюра
+                      li.item_4
+                        a(href='#') Кусачки для маникюра
+                      li.item_4
+                        a(href='#') Кусачки для педикюра
+                      li.item_4
+                        a(href='#') Фрезы
+                      li.item_4
+                        a(href='#') Пилки и терки для стоп
+                      li.item_4
+                        a(href='#') Лопатки, шаберы
+                      li.item_4
+                        a(href='#') Пилочка и бафы
+                      li.item_4
+                        a(href='#') Сопутствующие материалы
+                li.item_3
+                  span Уход
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1422')
+                  #accordion-m-1422.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Для удаления кутикулы
+                      li.item_4
+                        a(href='#') Для питания кутикулы
+                      li.item_4
+                        a(href='#') Для рук
+                li.item_3
+                  span Базы, топы, гели
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1423')
+                  #accordion-m-1423.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Базы под гель-лак
+                      li.item_4
+                        a(href='#') Топы под гель-лак
+                      li.item_4
+                        a(href='#') Праймеры
+                      li.item_4
+                        a(href='#') Гели
+                      li.item_4
+                        a(href='#') Формы для наращивания
+                      li.item_4
+                        a(href='#') Полигель
+                li.item_3
+                  span Аппараты для маникюра
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1424')
+                  #accordion-m-1424.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Ванночки
+                      li.item_4
+                        a(href='#') Пылесосы
+                      li.item_4
+                        a(href='#') Лампы
+                li.item_3
+                  span Дизайн ногтей
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1425')
+                  #accordion-m-1425.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Наклейки
+                      li.item_4
+                        a(href='#') Блестки,стразы
+                      li.item_4
+                        a(href='#') Фольга, поталь, втирка
+                li.item_3
+                  span Обработка инструментов
+                  a.icon.collapsed(data-toggle='collapse', href='#accordion-m-1426')
+                  #accordion-m-1426.collapse
+                    ul.menu_level_4.list-reset
+                      li.item_4
+                        a(href='#') Пакеты для стрелизации
+                      li.item_4
+                        a(href='#') Контейнеры для дезинфекции
+                li.item_3
+                  a(href='#') Кисти для маникюра
+                li.item_3
+                  a(href='#') Наборы для маникюра
+                li.item_3
+                  a(href='#') Очищение и снятие
+          li.item_2.active
+            a(href='#')
+              span Тело
+            a.icon.collapsed(data-toggle='collapse', href='#accordion-m-143')
+            #accordion-m-143.collapse.submenu
+              ul.menu_level_3.list-reset
+                li.item_3
+                  a(href='#') Кисти для маникюра
+                li.item_3
+                  a(href='#') Наборы для маникюра
+                li.item_3
+                  a(href='#') Очищение и снятие
           li.item_2
             a(href='#')
-              span Пункт 15
+              span Манирюк и педикюр
           li.item_2
             a(href='#')
-              span Пункт 16
+              span Электротовары
+          li.item_2
+            a(href='#')
+              span Товары для парикмахера
+          li.item_2
+            a(href='#')
+              span Прочие
     li.item_1
       a(href='#')
-        span Битрикс 24
+        span Бренды
+    li.item_1
+      a(href='#')
+        span Блог
+    li.item_1
+      a(href='#')
+        span О нас
+    li.item_1
+      a(href='#')
+        span Сотрудничество
+    li.item_1
+      a(href='#')
+        span Покупателю
