menu-mob icons width

--- a/local/templates/.default/_standart/examples/headers/header-4.html
+++ b/local/templates/.default/_standart/examples/headers/header-4.html
@@ -359,57 +359,170 @@
 					<div class="pm-inner">
 						<div class="menu-mob">
 							<ul class="menu_level_1 list-reset break-word">
-								<li class="item_1"><a href="#"><span>Разработка проектов</span></a></li>
-								<li class="item_1"><a href="#"><span>Продвижение сайтов</span></a><a class="icon" data-toggle="collapse" href="#accordion-m-12"></a>
-									<div class="collapse show submenu" id="accordion-m-12">
-										<ul class="menu_level_2 list-reset">
-											<li class="item_2"><a href="#"><span>Продвижение по позициям</span></a></li>
-											<li class="item_2"><span><span>Экспересс-SEO</span></span></li>
-											<li class="item_2 active"><a href="#"><span>Развития проектов (Повышение конверсии)</span></a></li>
-											<li class="item_2 active"><span><span>SEO-аудит</span></span></li>
-											<li class="item_2"><a href="#"><span>Стратегический поисковый маркетинг</span></a></li>
-											<li class="item_2"><a href="#"><span>SERM-управление репутацией в поиске</span></a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="item_1 active"><a href="#"><span>Техническая поддержка</span></a></li>
-								<li class="item_1 active"><span><span>Дизайн и проектирование</span></span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-14"></a>
+								<li class="item_1 active"><span><span>Каталог</span></span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-14"></a>
 									<div class="collapse submenu" id="accordion-m-14">
 										<ul class="menu_level_2 list-reset">
-											<li class="item_2"><a href="#"><span>Пункт 11</span></a></li>
-											<li class="item_2"><span><span>Пункт 12</span></span></li>
-											<li class="item_2 active"><a href="#"><span>Пункт 13 (дополнительная удлинняющая строка)</span></a><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-213"></a>
-												<div class="collapse submenu" id="accordion-m-213">
+											<li class="item_2 active"><span><span>Волосы</span></span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-141"></a>
+												<div class="collapse submenu" id="accordion-m-141">
 													<ul class="menu_level_3 list-reset">
-														<li class="item_3"><a href="#">Страхование домашнего имущества</a></li>
-														<li class="item_3"><a href="#">Комплексное страхование помещений и ГО его владельцев</a></li>
-														<li class="item_3"><a href="#">Страхование строений</a></li>
-													</ul>
-												</div>
-											</li>
-											<li class="item_2 active"><span><span>Пункт 14</span></span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-214"></a>
-												<div class="collapse submenu" id="accordion-m-214">
-													<ul class="menu_level_3 list-reset">
-														<li class="item_3"><a href="#">Страхование домашнего имущества</a></li>
-														<li class="item_3"><a href="#">Комплексное страхование помещений и ГО его владельцев</a><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-2141"></a>
-															<div class="collapse" id="accordion-m-2141">
+														<li class="item_3"><span>Обработка</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1411"></a>
+															<div class="collapse" id="accordion-m-1411">
 																<ul class="menu_level_4 list-reset">
-																	<li class="item_4"><a href="#">Страхование домашнего имущества</a></li>
-																	<li class="item_4"><a href="#">Комплексное страхование помещений и ГО его владельцев</a></li>
-																	<li class="item_4"><a href="#">Страхование строений</a></li>
+																	<li class="item_4"><a href="#">Ножницы для маникюра</a></li>
+																	<li class="item_4"><a href="#">Кусачки для маникюра</a></li>
+																	<li class="item_4"><a href="#">Кусачки для педикюра</a></li>
+																	<li class="item_4"><a href="#">Фрезы</a></li>
+																	<li class="item_4"><a href="#">Пилки и терки для стоп</a></li>
+																	<li class="item_4"><a href="#">Лопатки, шаберы</a></li>
+																	<li class="item_4"><a href="#">Пилочка и бафы</a></li>
+																	<li class="item_4"><a href="#">Сопутствующие материалы</a></li>
 																</ul>
 															</div>
 														</li>
-														<li class="item_3"><a href="#">Страхование строений</a></li>
+														<li class="item_3"><span>Уход</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1412"></a>
+															<div class="collapse" id="accordion-m-1412">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Для удаления кутикулы</a></li>
+																	<li class="item_4"><a href="#">Для питания кутикулы</a></li>
+																	<li class="item_4"><a href="#">Для рук</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Базы, топы, гели</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1413"></a>
+															<div class="collapse" id="accordion-m-1413">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Базы под гель-лак</a></li>
+																	<li class="item_4"><a href="#">Топы под гель-лак</a></li>
+																	<li class="item_4"><a href="#">Праймеры</a></li>
+																	<li class="item_4"><a href="#">Гели</a></li>
+																	<li class="item_4"><a href="#">Формы для наращивания</a></li>
+																	<li class="item_4"><a href="#">Полигель</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Аппараты для маникюра</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1414"></a>
+															<div class="collapse" id="accordion-m-1414">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Ванночки</a></li>
+																	<li class="item_4"><a href="#">Пылесосы</a></li>
+																	<li class="item_4"><a href="#">Лампы</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Дизайн ногтей</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1415"></a>
+															<div class="collapse" id="accordion-m-1415">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Наклейки</a></li>
+																	<li class="item_4"><a href="#">Блестки,стразы</a></li>
+																	<li class="item_4"><a href="#">Фольга, поталь, втирка</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Обработка инструментов</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1416"></a>
+															<div class="collapse" id="accordion-m-1416">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Пакеты для стрелизации</a></li>
+																	<li class="item_4"><a href="#">Контейнеры для дезинфекции</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><a href="#">Кисти для маникюра</a></li>
+														<li class="item_3"><a href="#">Наборы для маникюра</a></li>
+														<li class="item_3"><a href="#">Очищение и снятие</a></li>
 													</ul>
 												</div>
 											</li>
-											<li class="item_2"><a href="#"><span>Пункт 15</span></a></li>
-											<li class="item_2"><a href="#"><span>Пункт 16</span></a></li>
+											<li class="item_2"><span><span>Брови и ресницы</span></span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-142"></a>
+												<div class="collapse submenu" id="accordion-m-142">
+													<ul class="menu_level_3 list-reset">
+														<li class="item_3"><span>Обработка</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1421"></a>
+															<div class="collapse" id="accordion-m-1421">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Ножницы для маникюра</a></li>
+																	<li class="item_4"><a href="#">Кусачки для маникюра</a></li>
+																	<li class="item_4"><a href="#">Кусачки для педикюра</a></li>
+																	<li class="item_4"><a href="#">Фрезы</a></li>
+																	<li class="item_4"><a href="#">Пилки и терки для стоп</a></li>
+																	<li class="item_4"><a href="#">Лопатки, шаберы</a></li>
+																	<li class="item_4"><a href="#">Пилочка и бафы</a></li>
+																	<li class="item_4"><a href="#">Сопутствующие материалы</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Уход</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1422"></a>
+															<div class="collapse" id="accordion-m-1422">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Для удаления кутикулы</a></li>
+																	<li class="item_4"><a href="#">Для питания кутикулы</a></li>
+																	<li class="item_4"><a href="#">Для рук</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Базы, топы, гели</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1423"></a>
+															<div class="collapse" id="accordion-m-1423">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Базы под гель-лак</a></li>
+																	<li class="item_4"><a href="#">Топы под гель-лак</a></li>
+																	<li class="item_4"><a href="#">Праймеры</a></li>
+																	<li class="item_4"><a href="#">Гели</a></li>
+																	<li class="item_4"><a href="#">Формы для наращивания</a></li>
+																	<li class="item_4"><a href="#">Полигель</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Аппараты для маникюра</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1424"></a>
+															<div class="collapse" id="accordion-m-1424">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Ванночки</a></li>
+																	<li class="item_4"><a href="#">Пылесосы</a></li>
+																	<li class="item_4"><a href="#">Лампы</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Дизайн ногтей</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1425"></a>
+															<div class="collapse" id="accordion-m-1425">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Наклейки</a></li>
+																	<li class="item_4"><a href="#">Блестки,стразы</a></li>
+																	<li class="item_4"><a href="#">Фольга, поталь, втирка</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><span>Обработка инструментов</span><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-1426"></a>
+															<div class="collapse" id="accordion-m-1426">
+																<ul class="menu_level_4 list-reset">
+																	<li class="item_4"><a href="#">Пакеты для стрелизации</a></li>
+																	<li class="item_4"><a href="#">Контейнеры для дезинфекции</a></li>
+																</ul>
+															</div>
+														</li>
+														<li class="item_3"><a href="#">Кисти для маникюра</a></li>
+														<li class="item_3"><a href="#">Наборы для маникюра</a></li>
+														<li class="item_3"><a href="#">Очищение и снятие</a></li>
+													</ul>
+												</div>
+											</li>
+											<li class="item_2 active"><a href="#"><span>Тело</span></a><a class="icon collapsed" data-toggle="collapse" href="#accordion-m-143"></a>
+												<div class="collapse submenu" id="accordion-m-143">
+													<ul class="menu_level_3 list-reset">
+														<li class="item_3"><a href="#">Кисти для маникюра</a></li>
+														<li class="item_3"><a href="#">Наборы для маникюра</a></li>
+														<li class="item_3"><a href="#">Очищение и снятие</a></li>
+													</ul>
+												</div>
+											</li>
+											<li class="item_2"><a href="#"><span>Манирюк и педикюр</span></a></li>
+											<li class="item_2"><a href="#"><span>Электротовары</span></a></li>
+											<li class="item_2"><a href="#"><span>Товары для парикмахера</span></a></li>
+											<li class="item_2"><a href="#"><span>Прочие</span></a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="item_1"><a href="#"><span>Битрикс 24</span></a></li>
+								<li class="item_1"><a href="#"><span>Бренды</span></a></li>
+								<li class="item_1"><a href="#"><span>Блог</span></a></li>
+								<li class="item_1"><a href="#"><span>О нас</span></a></li>
+								<li class="item_1"><a href="#"><span>Сотрудничество</span></a></li>
+								<li class="item_1"><a href="#"><span>Покупателю</span></a></li>
 							</ul>
 						</div>
 					</div>
