--- a/local/src_v6/components/header/menu/menu-mob/style.scss
+++ b/local/src_v6/components/header/menu/menu-mob/style.scss
@@ -33,7 +33,7 @@ $_menu-mob-color-active:          $link-color-active;
         position: absolute;
         top: 0;
         right: 0;
-        width: 50px;
+        width: 100%;
         height: 50px;
         text-align: center;
         padding: 0;
@@ -47,7 +47,7 @@ $_menu-mob-color-active:          $link-color-active;
           bottom: 0;
           left: 0;
           right: 0;
-          margin: auto;
+          margin: auto 20px auto auto;
           width: 0;
           height: 0;
           transform: rotate(90deg);
