delete studio name

--- a/local/src_v6/components/demo/contacts--2/index.pug
+++ b/local/src_v6/components/demo/contacts--2/index.pug
@@ -1,6 +1,6 @@
 .contacts(itemtype="http://schema.org/Organization" itemscope="")
   .text-lg(itemprop="name")
-    | Частное предприятие «Студия Борового»
+    | Частное предприятие
   .h2.title(itemtype="http://schema.org/PostalAddress" itemscope="" itemprop="address")
     span(itemprop='streetAddress') г. Минск, ул. Каховская, 70а, 4 этаж,
     span(itemprop='postalCode')  220068
@@ -11,16 +11,16 @@
       li(itemprop='telephone') +375 (29) 163-23-22 Velcom
     ul.list-reset
       li
-        a(href='mailto:info@db.by')
-          span(itemprop='email') info@db.by
+        a(href='')
+          span(itemprop='email')
         |  — пишите по любым вопросам
       li
-        a(href='mailto:dv@db.by')
-          span(itemprop='email') dv@db.by
+        a(href='')
+          span(itemprop='email')
         |  — партнерство и сотрудничество
       li
-        a(href='mailto:hr@db.by')
-          span(itemprop='email') hr@db.by
+        a(href='#')
+          span(itemprop='email')
         |  — предложить на рассмотрение свое резюме
   table.mail.table-div.table-reset
     tbody
@@ -56,8 +56,8 @@
   ul.list-reset
     li
       | E-mail:
-      a(href='mailto:info@db.by')
-        span(itemprop='email') info@db.by
+      a(href='')
+        span(itemprop='email')
     li
       | Skype:
       a(href='skype:BorovoyStudio') BorovoyStudio
