--- a/local/src_v6/components/footer/contacts-foot/index.pug
+++ b/local/src_v6/components/footer/contacts-foot/index.pug
@@ -6,7 +6,7 @@
         | 220068, Республика Беларусь,
         br
         | Минск, ул. Каховская, 70а, 4 этаж
-      span(itemprop="name").hide ЧУП «Студия Борового»
+      span(itemprop="name").hide
       .link-map
         a(href="#") Как проехать
     .tel-wrap
