--- a/local/src_v6/components/pages/index/text-block/index.pug
+++ b/local/src_v6/components/pages/index/text-block/index.pug
@@ -1,6 +1,6 @@
 .text-block
   .h1.title
-    | Студия Борового &mdash;&nbsp;веб-студия
+    | веб-студия
     | с&nbsp;процессным подходом
   .text
     p.lead
