--- a/local/templates/.default/_standart/short/zaglushka.html
+++ b/local/templates/.default/_standart/short/zaglushka.html
@@ -45,7 +45,7 @@
 										<div class="tel"><a href="tel:+375173957868">+375 (17) 395-78-68</a> Городской</div>
 										<div class="tel"><a href="tel:+375293432322">+375 (29) 343-23-22</a> Velcom</div>
 										<div class="tel"><a href="tel:+375295662322">+375 (29) 566-23-22</a> МТС</div>
-										<div class="mail"><a href="mailto:info@db.by">info@db.by</a></div>
+										<div class="mail"><a href=""></a></div>
 									</div>
 								</div>
 							</article>
@@ -65,8 +65,8 @@
 							<div class="footer__right-col col-lg-5 col-md-7 col-12">
 								<div class="studio">
 									<div class="inner">
-										<div class="pic"><img src="../../img/studio.svg" alt="Студия Борового" title="Студия Борового"></div>
-										<div class="text-wrap">Разработка сайта — <a class="link" href="http://www.db.by/" target="_blank">Студия Борового</a>
+										<div class="pic"><img src="../../img/studio.svg" alt="Студия" title="Студия"></div>
+										<div class="text-wrap">Разработка сайта — <a class="link" href="" target="_blank">Студия</a>
 										</div>
 									</div>
 								</div>
