--- a/local/src_v6/components/footer/studio/index.pug
+++ b/local/src_v6/components/footer/studio/index.pug
@@ -1,8 +1,8 @@
 .studio
   .inner
     .pic
-      img(src=DB.DIR + 'img/studio.svg', alt='Студия Борового', title='Студия Борового')
+      img(src=DB.DIR + 'img/studio.svg', alt='Студия', title='Студия')
     .text-wrap
       | Разработка сайта —
       = ' '
-      a.link(href='http://www.db.by/', target='_blank') Студия Борового
+      a.link(href='', target='_blank') Студия
