--- a/local/templates/.default/_standart/examples/headers/header-5.html
+++ b/local/templates/.default/_standart/examples/headers/header-5.html
@@ -609,7 +609,7 @@
 								<div class="col-md-12 col-lg-8">
 									<div class="text-block">
 										<div class="h1 title">
-											Студия Борового &mdash;&nbsp;веб-студия
+											веб-студия
 											с&nbsp;процессным подходом
 										</div>
 										<div class="text">
@@ -631,7 +631,7 @@
 											</li>
 											<li class="item">
 												<div class="time">31 марта 2016</div>
-												<div class="subtitle"><a href="#">24 марта Студия Борового и компания «1С-Битрикс» провели первый в этом году семинар «Формула сайта»</a></div>
+												<div class="subtitle"><a href="#">24 марта компания «1С-Битрикс» провели первый в этом году семинар «Формула сайта»</a></div>
 											</li>
 										</ul>
 										<div class="all-news"><a href="#">Все новости</a></div>
