--- a/local/templates/.default/_standart/examples/studio.html
+++ b/local/templates/.default/_standart/examples/studio.html
@@ -394,8 +394,8 @@
 							<div style="padding: 15px 15px 1px; margin: 0 0 20px; background: #f7f8f3;">
 								<div class="studio">
 									<div class="inner">
-										<div class="pic"><img src="../../img/studio.svg" alt="Студия Борового" title="Студия Борового"></div>
-										<div class="text-wrap">Разработка сайта — <a class="link" href="http://www.db.by/" target="_blank">Студия Борового</a>
+										<div class="pic"><img src="../../img/studio.svg" alt="Студия" title="Студия"></div>
+										<div class="text-wrap">Разработка сайта — <a class="link" href="" target="_blank">Студия</a>
 										</div>
 									</div>
 								</div>
@@ -403,8 +403,8 @@
 							<div style="padding: 15px 15px 1px; margin: 0 0 20px; background: #2c2c2c;">
 								<div class="studio studio--invert">
 									<div class="inner">
-										<div class="pic"><img src="../../img/studio--invert.svg" alt="Студия Борового" title="Студия Борового"></div>
-										<div class="text-wrap">Разработка и продвижение сайта — <a class="link" href="http://www.db.by/" target="_blank">Студия Борового</a>
+										<div class="pic"><img src="../../img/studio--invert.svg" alt="" title=""></div>
+										<div class="text-wrap">Разработка и продвижение сайта — <a class="link" href="#" target="_blank"></a>
 										</div>
 									</div>
 								</div>
@@ -412,8 +412,8 @@
 							<div style="padding: 15px 15px 1px; margin: 0 0 20px; background: #2c2c2c;">
 								<div class="studio studio--white">
 									<div class="inner">
-										<div class="pic"><img src="../../img/studio--white.svg" alt="Студия Борового" title="Студия Борового"></div>
-										<div class="text-wrap">Продвижение сайта — <a class="link" href="http://www.db.by/" target="_blank">Студия Борового</a>
+										<div class="pic"><img src="../../img/studio--white.svg" alt="Студия" title="Студия"></div>
+										<div class="text-wrap">Продвижение сайта — <a class="link" href="#" target="_blank">Студия</a>
 										</div>
 									</div>
 								</div>
