--- a/local/templates/.default/_standart/short/error404.html
+++ b/local/templates/.default/_standart/short/error404.html
@@ -86,8 +86,8 @@
 							<div class="footer__right-col col-12 col-md-6 col-lg-4">
 								<div class="studio">
 									<div class="inner">
-										<div class="pic"><img src="../../img/studio.svg" alt="Студия Борового" title="Студия Борового"></div>
-										<div class="text-wrap">Разработка сайта — <a class="link" href="http://www.db.by/" target="_blank">Студия Борового</a>
+										<div class="pic"><img src="../../img/studio.svg" alt="Студия" title="Студия"></div>
+										<div class="text-wrap">Разработка сайта — <a class="link" href="" target="_blank">Студия</a>
 										</div>
 									</div>
 								</div>
